--- a/index.html
+++ b/index.html
@@ -4,19 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment || Five (5)</title>
-</head>
-<!-- daisyui -->
+    <!-- daisyui -->
 <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
 <!-- tailwindcss -->
 <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 <!-- font-awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 <body>
-    <header>
-        <div class="header_left">
-            <img class="" src="./assets/logo.png" alt="">
-            <p>Emergency </br> Service</p>
+    <header class="flex items-center justify-between p-5">
+        <div class="header_left flex">
+            <img class=" w-12 mr-2" src="./assets/logo.png" alt="">
+            <p class="font-bold  text-green-700">Emergency <br> Service</p>
+        </div>
+        <div class="header_right flex ">
+            <div class="flex mr-5 bg-[#41ff6b1a] p-4 rounded-[30px]">
+                <p class="font-bold">0</p>
+                <img class="w-7 ml-3" src="./assets/heart.png" alt="">
+            </div>
+            <div class="flex mr-5 bg-[#41ff6b1a] p-4 rounded-[30px]">
+                <p class="font-bold">100</p>
+                <img class="w-7 ml-3" src="./assets/coin.png" alt="">
+            </div>
+            <button class="mr-5 bg-green-800 text-white px-7 rounded-[10px]" id="copy_btn"> Copy</button>
         </div>
     </header>
+
+
 </body>
 </html>
