History Part Done

--- a/index.html
+++ b/index.html
@@ -248,7 +248,15 @@
               </div>
             </div>
           </div>
-
+          <div class="card_right_div  bg-white">
+            <div class="p-10 flex justify-between items-center">
+                <h3 ><i class="fa-solid fa-clock-rotate-left mr-2"></i>Call History</h3>
+                <button id="clear_btn" class=" bg-green-800 px-4 py-3 rounded-lg text-white font-bold">Clear</button>
+            </div>
+            <div class="bg-gray-300 mx-auto w-[80%] p-5 rounded-lg">
+                <p>6sdcsdca</p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
