last finishing style add

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <p id="hart_count" class="font-bold">0</p>
           <img class="w-7 ml-3" src="./assets/heart.png" alt="" />
         </div>
-        <div class="flex items-center mr-5 bg-[#41ff6b1a] p-4 rounded-[30px]">
+        <div class="flex items-center mr-5 bg-[#314a371a] p-4 rounded-[30px]">
           <p id="coin_count" class="font-bold">100</p>
           <img class="w-7 ml-3" src="./assets/coin.png" alt="" />
         </div>
@@ -82,7 +82,7 @@
                   >Univesal</span
                 >
                 <div class="card-actions justify-evenly mb-4">
-                  <button class="copy_btn badge badge-outline px-5 py-4 font-semibold">
+                  <button class="copy_btn cursor-pointer badge badge-outline px-5 py-4 font-semibold">
                     <i id="copy_btn" class="fa-solid fa-copy"></i>Copy
                   </button>
                   <button
@@ -110,7 +110,7 @@
                   >Univesal</span
                 >
                 <div class="card-actions justify-evenly mb-4">
-                  <button class="copy_btn badge badge-outline px-5 py-4 font-semibold">
+                  <button class="copy_btn cursor-pointer badge badge-outline px-5 py-4 font-semibold">
                     <i id="copy_btn" class="fa-solid fa-copy"></i>Copy
                   </button>
                   <button
@@ -165,7 +165,7 @@
                   >Univesal</span
                 >
                 <div class="card-actions justify-evenly mb-4">
-                  <button class="copy_btn badge badge-outline px-5 py-4 font-semibold">
+                  <button class="copy_btn cursor-pointer  badge badge-outline px-5 py-4 font-semibold">
                     <i id="copy_btn" class="fa-solid fa-copy"></i>Copy
                   </button>
                   <button
@@ -193,7 +193,7 @@
                   >Univesal</span
                 >
                 <div class="card-actions justify-evenly mb-4">
-                  <button class="copy_btn badge badge-outline px-5 py-4 font-semibold">
+                  <button class="copy_btn cursor-pointer  badge badge-outline px-5 py-4 font-semibold">
                     <i id="copy_btn" class="fa-solid fa-copy"></i>Copy
                   </button>
                   <button
@@ -249,7 +249,7 @@
                   >Univesal</span
                 >
                 <div class="card-actions justify-evenly mb-4">
-                  <button class="copy_btn badge badge-outline px-5 py-4 font-semibold">
+                  <button class="copy_btn cursor-pointer  badge badge-outline px-5 py-4 font-semibold">
                     <i id="copy_btn" class="fa-solid fa-copy"></i>Copy
                   </button>
                   <button
@@ -278,7 +278,7 @@
                 >
                 <div class="card-actions justify-evenly mb-4">
                   <button class="copy_btn badge badge-outline px-5 py-4 font-semibold">
-                    <i id="copy_btn" class="fa-solid fa-copy"></i>Copy
+                    <i id="copy_btn" class=" cursor-pointer fa-solid fa-copy"></i>Copy
                   </button>
                   <button
                     class="call badge badge-outline px-7 py-4 bg-[#00a63e] text-white cursor-pointer"
@@ -305,7 +305,7 @@
                 >
                 <div class="card-actions justify-evenly mb-4">
                   <button class="copy_btn badge badge-outline px-5 py-4 font-semibold">
-                    <i id="copy_btn" class="fa-solid fa-copy"></i>Copy
+                    <i id="copy_btn" class=" cursor-pointer fa-solid fa-copy"></i>Copy
                   </button>
                   <button
                     class="call badge badge-outline px-7 py-4 bg-[#00a63e] text-white cursor-pointer"
@@ -325,7 +325,7 @@
               </h3>
               <button
                 id="clear_btn"
-                class="bg-green-800 px-4 py-3 rounded-lg text-white font-bold"
+                class="cursor-pointer bg-green-800 px-4 py-3 rounded-lg text-white font-bold"
               >
                 Clear
               </button>
